add CN version